# TodoGuru

./: .coverage  .env.example  .gitignore  .replit  CI_CD_README.md  FEATURE_README.md  README.md  SONARQUBE_DEMO_RESULTS.md  SONARQUBE_SETUP.md  passwords.txt  pyproject.toml  replit.md  sonar-project.cloud.properties  sonar-project.local.properties  sonar-project.properties  tasks.json
.github/workflows/: badges.yml  ci-cd-pipeline.yml  deploy-demo.yml  quick-test.yml  security-scan.yml  sonar.yml  sonarcloud-analysis.yml  sonarqube-local-analysis.yml
.scannerwork/: report-task.txt
badges/: color.txt
scripts/: run-sonar-analysis.sh
tests/: .coverage  __init__.py  test_bad_features.py  test_task_manager.py
todo_cli/: __init__.py  config.py  main.py  sharing_manager.py  task_manager.py  user_manager.py
